[gd_scene load_steps=21 format=3 uid="uid://ccuh24a03ypty"]

[ext_resource type="Shader" uid="uid://bg0st5xntgvce" path="res://Asetts/pausemenu.gdshader" id="1_emv3i"]
[ext_resource type="Script" uid="uid://p7gaaqyd6jjy" path="res://Scripts/pause_menu.gd" id="1_k0w1u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k0w1u"]
shader = ExtResource("1_emv3i")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0w1u"]
bg_color = Color(0.290196, 0.403922, 0.419608, 0.905882)
corner_radius_top_left = 29
corner_radius_top_right = 29
corner_radius_bottom_right = 29
corner_radius_bottom_left = 29

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1och7"]
bg_color = Color(0.6, 0.6, 0.6, 0.780392)
corner_radius_top_left = 29
corner_radius_top_right = 29

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpi0q"]
bg_color = Color(0.317647, 0.317647, 0.317647, 0.627451)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myy0f"]
bg_color = Color(0.719137, 0.677818, 0.925697, 0.352941)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjs17"]
bg_color = Color(0.564706, 0.564706, 0.564706, 0.792157)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmyb1"]
bg_color = Color(0.286275, 0.286275, 0.286275, 0.72549)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u8tnp"]
bg_color = Color(0.286275, 0.286275, 0.286275, 0.878431)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stj27"]
bg_color = Color(0.717647, 0.678431, 0.92549, 0.352941)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ix48p"]
bg_color = Color(0.564706, 0.564706, 0.564706, 0.792157)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_524vl"]
bg_color = Color(0.286275, 0.286275, 0.286275, 0.72549)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fi7f"]
bg_color = Color(0.286275, 0.286275, 0.286275, 0.878431)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uscpe"]
bg_color = Color(0.717647, 0.678431, 0.92549, 0.352941)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_taale"]
bg_color = Color(0.564706, 0.564706, 0.564706, 0.792157)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7fiq"]
bg_color = Color(0.286275, 0.286275, 0.286275, 0.72549)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[sub_resource type="Animation" id="Animation_k0w1u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_emv3i"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.886]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1och7"]
_data = {
&"RESET": SubResource("Animation_k0w1u"),
&"blur": SubResource("Animation_emv3i")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0w1u")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_k0w1u")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.487
anchor_top = 0.471
anchor_right = 0.487
anchor_bottom = 0.471
offset_left = -200.024
offset_top = -184.208
offset_right = 196.976
offset_bottom = 166.792
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k0w1u")

[node name="paused_label_container" type="Panel" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1och7")

[node name="paused_label" type="Label" parent="PanelContainer/paused_label_container"]
layout_mode = 2
offset_right = 397.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 22
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 201)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 21
alignment = 1

[node name="spacer" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="resume_button" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_bpi0q")
theme_override_styles/hover = SubResource("StyleBoxFlat_myy0f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sjs17")
theme_override_styles/normal = SubResource("StyleBoxFlat_vmyb1")
text = "Resume"

[node name="restart_button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_u8tnp")
theme_override_styles/hover = SubResource("StyleBoxFlat_stj27")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ix48p")
theme_override_styles/normal = SubResource("StyleBoxFlat_524vl")
text = "Restart"

[node name="back_to_menu button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_0fi7f")
theme_override_styles/hover = SubResource("StyleBoxFlat_uscpe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_taale")
theme_override_styles/normal = SubResource("StyleBoxFlat_q7fiq")
text = "Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1och7")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/resume_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart_button" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/back_to_menu button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/back_to_menu button" to="." method="_on_back_to_menu_button_pressed"]
